Fixed a typo on the main page.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="col-lg-4">
 
           <h2>Keynote Speakers</h2>
-          <p>Our keynote speakers highlighted significant research and challenges in neuromorphic computing.</p>
+          <p>Our keynote speakers will highlight significant research and challenges in neuromorphic computing.</p>
           <p><a class="btn btn-default" href="keynotespeakers.html" role="button">View details &raquo;</a></p>
 
   
