Updated dates on Important dates.

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   			<i class="fa fa-file-text-o"></i>&nbsp;&nbsp;&nbsp;TBD<br> Submission of workshop papers<br><br>
   			<i class="fa fa-thumbs-o-up"></i>&nbsp;&nbsp;&nbsp;TBD<br> Notification of paper acceptance<br><br>
   			<!--<i class="fa fa-camera"></i>&nbsp;&nbsp;&nbsp;TBD<br> Camera-ready submission of accepted papers<br><br>-->
-	  		<i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;June 29 - July 1, 2016<br> Workshop<br><br>
+	  		<i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;July 17 - 19, 2017<br> Workshop<br><br>
 	  		
 		  </p>
         </div>
