--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 		  -->
 		  <p class="lead">
   			
-  			<i class="fa fa-file-text-o"></i>&nbsp;&nbsp;&nbsp;TBD<br> Submission of workshop papers<br><br>
-  			<i class="fa fa-thumbs-o-up"></i>&nbsp;&nbsp;&nbsp;TBD<br> Notification of paper acceptance<br><br>
+  			<i class="fa fa-file-text-o"></i>&nbsp;&nbsp;&nbsp;April 28, 2017<br> Submission of workshop papers<br><br>
+  			<i class="fa fa-thumbs-o-up"></i>&nbsp;&nbsp;&nbsp;May 26, 2017<br> Notification of paper acceptance<br><br>
   			<!--<i class="fa fa-camera"></i>&nbsp;&nbsp;&nbsp;TBD<br> Camera-ready submission of accepted papers<br><br>-->
 	  		<i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;July 17 - 19, 2017<br> Workshop<br><br>
 	  		
