--- a/keynotespeakers.html
+++ b/keynotespeakers.html
@@ -49,7 +49,7 @@
             <div class="navbar-collapse collapse pull-right">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
-<li><a href="https://www.ornl.gov/content/come-see-us">Venue</a></li>
+<!--<li><a href="https://www.ornl.gov/content/come-see-us">Venue</a></li>-->
                 <li><a href="index.html#important-dates">Important Dates</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Information<b class="caret"></b></a>
