Changed title to Symposium.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-    <title>Neuromorphic Computing Workshop</title>
+    <title>Neuromorphic Computing Symposium</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
@@ -150,7 +150,7 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <h2>Call for Papers</h2>
-          <p>Call for papers will be available in March 2017.</p>
+          <p>Call for papers is now available!</p>
           <p><a class="btn btn-default" href="cfp.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <!--
