--- a/keynotespeakers.html
+++ b/keynotespeakers.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-    <title>Neuromorphic Computing Workshop - Keynote Speakers</title>
+    <title>Neuromorphic Computing Symposium - Keynote Speakers</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
