--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-    <title>Neuromorphic Computing Symposium - Organizing Committee</title>
+    <title>Neuromorphic Computing Conference - Organizing Committee</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
