--- a/programcommittee.html
+++ b/programcommittee.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-    <title>Neuromorphic Computing Conference - Program Committee</title>
+    <title>Neuromorphic Computing Symposium - Program Committee</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
