--- a/cfp.html
+++ b/cfp.html
@@ -155,10 +155,18 @@ White paper Submissions must clearly identify the workshop attendee and include 
           <h2 class="featurette-heading"></h2> <!-- spacing to match main column -->
           <h3>Important Links</h3>
 
+		<!--
           <p class="text-muted">
              As soon as they are available, links to templates and the submission portal will be provided here along with guidelines for submission.
+		
           </p>
-
+		-->
+          <p>
+            <a class="btn btn-default" href="http://www.acm.org/sigs/publications/proceedings-templates" role="button">Paper templates</a>
+            <br/>
+			</p>
+          <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=ncama2017" role="button">Submit Now</a></p>
+		<p>Deadline for paper submission: April 25, 2017 at 11:59 PM EST.</p>
           <!--
           <p><a class="btn btn-default" href="files/Template.docx" role="button">White Paper Template</a></p>
           <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=ncama2016" role="button">Submit Now</a></p>
