Specified which template.

--- a/cfp.html
+++ b/cfp.html
@@ -162,7 +162,7 @@ White paper Submissions must clearly identify the workshop attendee and include 
           </p>
 		-->
           <p>
-            <a class="btn btn-default" href="http://www.acm.org/sigs/publications/proceedings-templates" role="button">Paper templates</a>
+            <a class="btn btn-default" href="http://www.acm.org/sigs/publications/proceedings-templates" role="button">Paper templates</a></p>  <p>Please use the ACM sigconf format. 
             <br/>
 			</p>
           <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=ncama2017" role="button">Submit Now</a></p>
