Program committee added.

--- a/programcommittee.html
+++ b/programcommittee.html
@@ -96,30 +96,28 @@
 
             <div class="row featurette">
         <div class="col-md-7">
-        <p class="lead">To be announced.</p>
-        <!--
+     <!--   <p class="lead">To be announced.</p>-->
       <ul>
       <li>Brad Aimone, Sandia National Laboratory</li>
-      <li>Frank Alexander, Los Alamos National Laboratory</li>
-      <li>Mike Berry, University of Tennessee</li>
       <li>Jim Brase, Lawrence Livermore National Laboratory</li>
-      <li>Yiran Chen, University of Pittsburgh</li>
+	<li>Yu Cao, Arizona State University</li>
       <li>Mark Dean, University of Tennessee</li>
       <li>Hal Finkel, Argonne National Laboratory</li>
       <li>Mark Greaves, Pacific Northwest National Laboratory</li>
-      <li>Giacomo Indiveri, University of Zurich</li>
       <li>Garrett Kenyon, Los Alamos National Laboratory</li>
       <li>Kerstin Kleese van Dam, Brookhaven National Laboratory</li>
       <li>Dhireesha Kudithipudi, Rochester Institute of Technology</li>
-      <li>Emre Neftci, University of California, Irvine</li>
+	<li>Cory Merkel, Air Force Research Laboratory</li>
+<li>Alice Parker, University of Southern California</li>
 	<li>Garrett Rose, University of Tennessee</li>	
-<li>Justin Shumaker, Army Research Laboratory</li>
+	<li>Kaushik Roy, Purdue University</li>
+<li>Vishal Saxena, University of Idaho</li>
 <li>Tarek Taha, University of Dayton</li>
  <li>Brian Van Essen, Lawrence Livermore National Laboratory</li>
 <li>Jeff Vetter, Oak Ridge National Laboratory</li>
-
+<li>Yuan Xie, University of California, Santa Barbara</li>
+<li>Angel Yanguas-Gil, Argonne National Laboratory</li>
 </ul>
--->
 	</div>
 	</div>
       <!--
