--- a/registration.html
+++ b/registration.html
@@ -87,21 +87,26 @@
 
           <h2 class="featurette-heading">Registration and Hotel Information</h2>
           <hr class="featurette-divider">
-          <p class="lead"> Registration and hotel information will be available in April 2017.</p>
-          <!--
-          <p class="lead"><b>Registration closes for foreign nationals on June 20, 2016.  Registration closes for all other attendees on June 23, 2016.</b></p>
+        <!--  <p class="lead"> Registration and hotel information will be available in April 2017.</p>-->
+       
+         <!-- <p class="lead"><b>Registration closes for foreign nationals on June 20, 2016.  Registration closes for all other attendees on June 23, 2016.</b></p>-->
           <p class="lead">
-		Registration fees are $250 for regular attendees and $100 for student attendees.  All attendees (including speakers) must register for the event. The registration fee includes lunch on Wednesday and Thursday. <a href="https://utconferences.outreach.utk.edu/ei/getdemo.ei?id=473&s=_3ZK0VKETB&bulk=y">Please click here to register.</a>
+		Registration fees are $250 for regular attendees and $100 for student attendees.  All attendees (including speakers) must register for the event. The registration fee includes lunch on Monday and Tuesday and dinner on Monday evening. <a href="https://utconferences.eventsair.com/neuromorphic-computing-symposium-2017/registration">Please click here to register.</a>
          </p>
          
 
 		<p class="lead">
-		We have reserved a block of rooms at the <a href="http://www.ihg.com/staybridge/hotels/us/en/oak-ridge/okrsb/hoteldetail">Staybridge Suites</a> in Oak Ridge, TN, for $89 a night, plus taxes and fees. <a href="https://www.ihg.com/staybridge/hotels/us/en/reservation/book?qAAR=6CBARC&qAdlt=1&qBrs=6c.hi.ex.rs.ic.cp.in.sb.cw.cv.ul.vn&qChld=0&qCiD=28&qCiMy=052016&qCoD=02&qCoMy=062016&qDest=420+South+Illinois+Ave.+Oak+Ridge+Tennessee+United+States&qFRA=1&qGRM=0&qGrpCd=UTB&qHtlC=OKRSB&qPSt=0&qRRSrt=rt&qRef=df&qRms=1&qRpn=1&qRpp=12&qRtP=6CBARC&qSHp=1&qSlH=OKRSB&qSmP=3&qSrt=sBR&qWch=0&srb_u=1&method=redirect&icdv=99801505&icdv=99801505#roomratestitle">Please click here to make a reservation in the room block.</a>
+		The conference venue and hotel is the <a href="http://www.crowneknox.com">Crowne Plaza Downtown Knoxville University</a>.  We have reserved a block of rooms at the hotel for $96 per night plus taxes and fees.  <a href="https://www.ihg.com/crowneplaza/hotels/us/en/knoxville/tyssh/hoteldetail?qAdlt=1&qBrs=6c.hi.ex.rs.ic.cp.in.sb.cw.cv.ul.vn.ki.sp.nd.ct&qChld=0&qFRA=1&qGRM=0&qGrpCd=NEU&qIta=99801505&qPSt=0&qRRSrt=rt&qRef=df&qRms=1&qRpn=1&qRpp=20&qSHp=1&qSmP=3&qSrt=sBR&qWch=0&srb_u=1&icdv=99801505">Please click here to make a reservation in the room block</a> or call the hotel at 865-522-2600, Monday – Friday, 8:30 AM – 5:30 PM EST, and ask to speak with Jamie Julius, the Reservations Manager, for special requests for early arrivals or departures later than the cut-off date.  The deadline for reserving a room at the Crowne Plaza at the conference rate is <b>June 16, 2017</b>.  
 		</p>
-
+		
+		<p class="lead">
+		A short walk from the conference venue will take you to Knoxville's World's Fair Park, Market Square, and the Old City.
+		</p>
+		<!--
 		<p class="lead">
 		We will not provide shuttles to/from the hotel to the conference center.  Please make alternative arrangements for transportation. <a href="http://www.tys.org/tys/pay-us-a-visit/car-rental/">Rental cars are available at McGhee Tyson Airport.</a> Directions to the conference center are available <a href="https://www.ornl.gov/content/maps-and-directions">here</a>.
 		</p>
+
 		<p class="lead">We do not recommend relying on taxi services, as taxi services coming to/from the conference center require badged drivers.  The following taxi companies have badged drivers, but you must notify the company that you are visiting ORNL when arranging pick-up.
 		<ul>
 		<li>Chariots of Hire: (865) 522-8108 or (800) 287-5934</li>
@@ -109,18 +114,18 @@
 		<li>Discount Taxi: (865) 755-5143, (865) 705-1341 or <a href="http://www.knoxvillediscounttaxi.com">order online</a>.
 		</ul>
 		</p>
-		-->
+
  <hr class="featurette-divider">
         </div>
 
         <div class="col-md-3 col-md-offset-1">
-          <h2 class="featurette-heading"></h2> <!-- spacing to match main column -->
+          <h2 class="featurette-heading"></h2> 
           <h3>Important Links</h3>
 
           <p class="text-muted">
              As soon as they are available, links to registration and hotel information will be provided.
           </p>
-
+-->
           <!--
           <p><a class="btn btn-default" href="https://utconferences.outreach.utk.edu/ei/getdemo.ei?id=473&s=_3ZK0VKETB&bulk=y" role="button">Register Now</a></p>
           <p><a class="btn btn-default" href="https://www.ihg.com/staybridge/hotels/us/en/reservation/book?qAAR=6CBARC&qAdlt=1&qBrs=6c.hi.ex.rs.ic.cp.in.sb.cw.cv.ul.vn&qChld=0&qCiD=28&qCiMy=052016&qCoD=02&qCoMy=062016&qDest=420+South+Illinois+Ave.+Oak+Ridge+Tennessee+United+States&qFRA=1&qGRM=0&qGrpCd=UTB&qHtlC=OKRSB&qPSt=0&qRRSrt=rt&qRef=df&qRms=1&qRpn=1&qRpp=12&qRtP=6CBARC&qSHp=1&qSlH=OKRSB&qSmP=3&qSrt=sBR&qWch=0&srb_u=1&method=redirect&icdv=99801505&icdv=99801505#roomratestitle" role="button">Reserve Hotel</a></p>
