Updated landing page.

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Venue</h1>
-              <p>The workshop will be held in Knoxville, Tennessee, July 17-19, 2017.</p>
-             <p><a class="btn btn-lg btn-primary" href="https://www.ornl.gov/content/come-see-us" role="button">Learn more</a></p>
+              <p>The workshop will be held in at the Crowne Plaza in Knoxville, Tennessee, July 17-19, 2017.</p>
+             <p><a class="btn btn-lg btn-primary" href="registration.html" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -145,7 +145,7 @@
           -->
               
            <h2>Registration and Hotel Information</h2>
-          <p>Registration and hotel information will be made available in April 2017.</p>
+          <p>Registration and hotel information is now available!</p>
           <p><a class="btn btn-default" href="registration.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
