--- a/registration.html
+++ b/registration.html
@@ -91,7 +91,8 @@
        
          <!-- <p class="lead"><b>Registration closes for foreign nationals on June 20, 2016.  Registration closes for all other attendees on June 23, 2016.</b></p>-->
           <p class="lead">
-		Registration fees are $250 for regular attendees and $100 for student attendees.  All attendees (including speakers) must register for the event. The registration fee includes lunch on Monday and Tuesday and dinner on Monday evening. <a href="https://utconferences.eventsair.com/neuromorphic-computing-symposium-2017/registration">Please click here to register.</a>
+		<!--Registration fees are $250 for regular attendees and $100 for student attendees.  
+		All attendees (including speakers) must register for the event. The registration fee includes lunch on Monday and Tuesday and dinner on Monday evening. <a href="https://utconferences.eventsair.com/neuromorphic-computing-symposium-2017/registration">Please click here to register.</a>-->
          </p>
          
 
