Updated cfp deadlines.

--- a/cfp.html
+++ b/cfp.html
@@ -111,7 +111,7 @@
                    <h3 class="topics-header">We are accepting submissions in the following forms:</h3>
 
                    <ol class="topics-list">
-                   <li> Full papers (6-8 pages), which will be considered for full (20 minute) presentations. </li>
+                   <li> Full papers (6-8 pages), which will be considered for full (20 minute) presentations.  A 1-2 page extended abstract is due prior to the full paper submission. </li>
                    <li> Extended abstracts (1-2 pages) for lightning talks and/or poster presentations.</li>
                    </ol>
                   
@@ -166,7 +166,9 @@ White paper Submissions must clearly identify the workshop attendee and include 
             <br/>
 			</p>
           <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=ncama2017" role="button">Submit Now</a></p>
-		<p>Deadline for paper submission: April 25, 2017 at 11:59 PM EST.</p>
+		<p>Deadline for abstract submission: May 5, 2017 at 11:59 PM EST.</p>
+		<p>Abstract acceptance notification: May 26, 2017.</p>
+		<p>Deadline for full paper submission: June 18, 2017 at 11:59 PM EST.</p>
           <!--
           <p><a class="btn btn-default" href="files/Template.docx" role="button">White Paper Template</a></p>
           <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=ncama2016" role="button">Submit Now</a></p>
