Added registration link.

--- a/registration.html
+++ b/registration.html
@@ -91,19 +91,19 @@
        
          <!-- <p class="lead"><b>Registration closes for foreign nationals on June 20, 2016.  Registration closes for all other attendees on June 23, 2016.</b></p>-->
           <p class="lead">
-		<!--Registration fees are $250 for regular attendees and $100 for student attendees.  
-		All attendees (including speakers) must register for the event. The registration fee includes lunch on Monday and Tuesday and dinner on Monday evening. <a href="https://utconferences.eventsair.com/neuromorphic-computing-symposium-2017/registration">Please click here to register.</a>-->
+		Registration fees are $400 for regular attendees and $150 for student attendees.  
+		All attendees (including speakers) must register for the event. The registration fee includes breakfast and lunch on Monday, Tuesday, and Wednesday, and dinner on Monday evening. <a href="https://utconferences.eventsair.com/neuromorphic-computing-symposium-2017/registration">Please click here to register.</a> The registration deadline is <b>June 30, 2017</b>.
          </p>
          
 
 		<p class="lead">
 		The conference venue and hotel is the <a href="http://www.crowneknox.com">Crowne Plaza Downtown Knoxville University</a>.  We have reserved a block of rooms at the hotel for $96 per night plus taxes and fees.  <a href="https://www.ihg.com/crowneplaza/hotels/us/en/knoxville/tyssh/hoteldetail?qAdlt=1&qBrs=6c.hi.ex.rs.ic.cp.in.sb.cw.cv.ul.vn.ki.sp.nd.ct&qChld=0&qFRA=1&qGRM=0&qGrpCd=NEU&qIta=99801505&qPSt=0&qRRSrt=rt&qRef=df&qRms=1&qRpn=1&qRpp=20&qSHp=1&qSmP=3&qSrt=sBR&qWch=0&srb_u=1&icdv=99801505">Please click here to make a reservation in the room block</a> or call the hotel at 865-522-2600, Monday – Friday, 8:30 AM – 5:30 PM EST, and ask to speak with Jamie Julius, the Reservations Manager, for special requests for early arrivals or departures later than the cut-off date.  The deadline for reserving a room at the Crowne Plaza at the conference rate is <b>June 16, 2017</b>.  Reservation cancellation without fee must be made 24 hours prior to check-in. Early departures are subject to a $15 early departure fee.     
 		</p>
-		
+		<!--
 		<p class="lead">
 		A short walk from the conference venue will take you to Knoxville's World's Fair Park, Market Square, and the Old City.
 		</p>
-		<!--
+		
 		<p class="lead">
 		We will not provide shuttles to/from the hotel to the conference center.  Please make alternative arrangements for transportation. <a href="http://www.tys.org/tys/pay-us-a-visit/car-rental/">Rental cars are available at McGhee Tyson Airport.</a> Directions to the conference center are available <a href="https://www.ornl.gov/content/maps-and-directions">here</a>.
 		</p>
