Not including references added.

--- a/cfp.html
+++ b/cfp.html
@@ -111,8 +111,8 @@
                    <h3 class="topics-header">We are accepting submissions in the following forms:</h3>
 
                    <ol class="topics-list">
-                   <li> Full papers (6-8 pages), which will be considered for full (20 minute) presentations.  A 1-2 page extended abstract is due prior to the full paper submission. </li>
-                   <li> Extended abstracts (1-2 pages) for lightning talks and/or poster presentations.</li>
+                   <li> Full papers (6-8 pages), which will be considered for full (20 minute) presentations.  A 1-2 page extended abstract (not including references) is due prior to the full paper submission. </li>
+                   <li> Extended abstracts (1-2 pages not including references) for lightning talks and/or poster presentations.</li>
                    </ol>
                   
                    
