--- a/cfp.html
+++ b/cfp.html
@@ -166,8 +166,8 @@ White paper Submissions must clearly identify the workshop attendee and include 
             <br/>
 			</p>
           <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=ncama2017" role="button">Submit Now</a></p>
-		<p>Deadline for abstract submission: May 5, 2017 at 11:59 PM EST.</p>
-		<p>Abstract acceptance notification: May 26, 2017.</p>
+		<p>Deadline for abstract submission: <s>May 5, 2017</s> <b>May 17, 2017</b>.</p>
+		<p>Abstract acceptance notification: <s>May 26, 2017.</s> <b>June 2, 2017</b></p>
 		<p>Deadline for full paper submission: June 18, 2017 at 11:59 PM EST.</p>
           <!--
           <p><a class="btn btn-default" href="files/Template.docx" role="button">White Paper Template</a></p>
