Updated program and keynote speakers page.

--- a/program.html
+++ b/program.html
@@ -104,7 +104,7 @@
           <li>9:30-10:30 AM - Neuromorphic Community Overview Keynote Presentation: <a href="http://catherineschuman.com">Catherine Schuman</a></li>
           <li>10:30-10:50 AM - Break</li>
           <li>10:50 AM-12:10 PM - Presentations</li>
-          <li>12:10-1:30 PM - Working Lunch - Applications</li>
+          <li>12:10-1:30 PM - Working Lunch - Keynote: <a href="https://www.energy.gov/diversity/contributors/dimitri-kusnezov">Dimitri Kusnezov</a></li>
           <li>1:30-3:10 PM - Presentations</li>
           <li>3:10-3:30 PM - Break</li>
           <li>3:30-4:00 PM - Poster Slam</li>
@@ -134,7 +134,7 @@
           <ul>
           <li> 8:00-9:00 AM - Registration</li>
 <li>9:00-9:10 AM - Welcome/Recap</li>
-<li>9:10-10:10 AM - Neuroscience Keynote Presentation: <a href="http://gsm.utmck.edu/anesthesiology/faculty/lydic.cfm">Ralph Lydic</a></li>
+<li>9:10-10:10 AM - Neuroscience Keynote Presentation</li>
 <li>10:10-10:30 AM - Break</li>
 <li>10:30-11:30 AM - Presentations</li>
 <li>11:30 AM - 1:00 PM - Working Lunch - Paths Forward</li>
