Fixing mis-spelling.

--- a/keynotespeakers.html
+++ b/keynotespeakers.html
@@ -130,7 +130,7 @@
 </div>	
       <div class="row featurette">
         <div class="col-md-12">
-        <h2 class="featurette-heading">Dimitri Kusnezo</h2>
+        <h2 class="featurette-heading">Dimitri Kusnezov</h2>
         </div>
         <div class="col-md-7">
         
@@ -139,7 +139,7 @@ Dr. Kusnezov received A.B. degrees in Physics and in Pure Mathematics with highe
 </p>
         </div>
         <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="bio_images/Dimitri_Kusnezo.jpg" alt="Dimitri Kusnezo">
+        <img class="featurette-image img-responsive" src="bio_images/Dimitri_Kusnezo.jpg" alt="Dimitri Kusnezov">
         </div>
        </div> 
       <div class="row featurette">
