Updated keynote bios and registraiton page.

--- a/registration.html
+++ b/registration.html
@@ -92,7 +92,7 @@
          <!-- <p class="lead"><b>Registration closes for foreign nationals on June 20, 2016.  Registration closes for all other attendees on June 23, 2016.</b></p>-->
           <p class="lead">
 		Registration fees are $400 for regular attendees and $150 for student attendees.  
-		All attendees (including speakers) must register for the event. The registration fee includes breakfast and lunch on Monday, Tuesday, and Wednesday, and dinner on Monday evening. <a href="https://utconferences.eventsair.com/neuromorphic-computing-symposium-2017/registration">Please click here to register.</a> The registration deadline is <b>June 30, 2017</b>.
+		All attendees (including speakers) must register for the event. The registration fee includes coffee in the morning and lunch on Monday, Tuesday, and Wednesday, and dinner on Monday evening. <a href="https://utconferences.eventsair.com/neuromorphic-computing-symposium-2017/registration">Please click here to register.</a> The registration deadline is <b>June 30, 2017</b>.
          </p>
          
 
