Added full program to website.

--- a/program.html
+++ b/program.html
@@ -99,13 +99,24 @@
           
           <p class="lead">Monday, July 17, 2017</p>
           <ul>
-          <li>8:00-9:00 AM - Registration</li>
+          <li>8:00-9:00 AM - Registration/Coffee</li>
           <li>9:00-9:30 AM - Welcome</li>
           <li>9:30-10:30 AM - Neuromorphic Community Overview Keynote Presentation: <a href="http://catherineschuman.com">Catherine Schuman</a></li>
-          <li>10:30-10:50 AM - Break</li>
-          <li>10:50 AM-12:10 PM - Presentations</li>
-          <li>12:10-1:30 PM - Working Lunch - Keynote: <a href="https://www.energy.gov/diversity/contributors/dimitri-kusnezov">Dimitri Kusnezov</a></li>
+          <li>10:30-11:00 AM - Break</li>
+          <li>11:00 AM-12:05 PM - Presentations</li>
+          <ul>
+          <li>11:00-11:25 AM - “Efficient Hardware Implementation of Cellular Neural Networks with Powers-of-Two Based Incremental Quantization” -- Xiaowei Xu, Qing Lu, Tianchen Wang, Jinglan Liu, Yu Hu and <b>Yiyu Shi</b></li>
+          <li>11:25-11:50 AM - “A Multi-Level Optimization Framework for Efficient FPGA-Based Cellular Neural Network Implementation” -- Zhongyang Liu, Shaoheng Luo, Xiaowei Xu, <b>Yiyu Shi</b> and Cheng Zhuo</li>
+          <li>11:50 AM-12:05 PM - “Neuromorphic Navigation with DANNA” – <b>J. Parker Mitchell, Grant Bruer</b>, and Mark Dean</li>
+          </ul>
+          <li>12:05-1:30 PM - Working Lunch - Keynote: “Nexus of Machine Learning, Neuromorphic Computing, High Performance Computing, and the Million Veteran Program (MVP)” - <a href="https://www.energy.gov/diversity/contributors/dimitri-kusnezov">Dimitri Kusnezov</a></li>
           <li>1:30-3:10 PM - Presentations</li>
+          <ul>
+          <li>1:30-1:55 PM - “Neuromorphic Computing for Temporal Scientific Data Classification” - <b>Catherine Schuman</b>, Thomas Potok, Robert Patton, Steven Young, Gangotree Chakma, Austin Wyer and Garrett Rose</li>
+          <li>1:55-2:20 PM - “Neuromorphic Data Microscope” -- John Naegle, <b>David Follett</b>, Conrad James, Brad Aimone, Roger Suppona, Duncan Townsend and Gabe Karpman</li>
+          <li>2:20-2:45 PM - “Community detection with spiking neural networks for neuromorphic hardware” - <b>Kathleen Hamilton</b>, Neena Imam and Travis Humble</li>
+          <li>2:45-3:10 PM - “Neural Computing for Scientific Computing Applications - More than Just Machine Learning” – <b>Brad Aimone</b>, Ojas Parekh and William Severa</li>
+          </ul>
           <li>3:10-3:30 PM - Break</li>
           <li>3:30-4:00 PM - Poster Slam</li>
           <li>4:00-5:30 PM - Poster/Demo Session</li>
@@ -116,15 +127,27 @@
           <hr class="featurette-divider">
           <p class="lead">Tuesday, July 18, 2017</p>
           <ul>
-          <li> 8:00-9:00 AM - Registration</li>
+          <li> 8:00-9:00 AM - Registration/Coffee</li>
 <li>9:00-9:10 AM - Welcome/Recap</li>
 <li>9:10-10:10 AM - Materials Science Keynote Presentation: <a href="https://www.ornl.gov/staff-profile/hans-m-christen">Hans Christen</a></li>
 <li>10:10-10:30 AM - Break</li>
 <li>10:30 AM -12:15 PM - Presentations</li>
+<ul>
+<li>10:30-10:55 AM - “Improving Neuromorphic Computing Efficiency with Sparse and Light Neural Networks” – <b>Yiran Chen</b></li>
+<li>10:55-11:20 AM - “From Meta-Stable Switch Collections to Compositional Machine Learning” – <b>Alex Nugent</b> and Tim Molter</li>
+<li>11:20-11:45 AM - “Spatio-Temporal Features on an Energy Budget: Transfer Learning with Deep CNNs and Reservoirs” -- Dillon Graham, Seyed Hamed F. Longroudi, Christopher Kanan, <b>Dhireesha Kudithipudi</b></li>
+<li>11:45 AM-12:00 PM - “From Topological Skyrmion to Biological Spike: Developing All-Skyrmion Spiking Neural Network” – Zhezhi He and <b>Deliang Fan</b></li>
+<li>12:00-12:15 PM - “Memristive Nanowire Networks” - <b>Jack Kendall</b> and Juan Nino</li>
+</ul>
 <li>12:15-1:30 PM - Working Lunch - Importance of Co-Design</li>
 <li>1:30-2:30 PM - Big Picture Keynote – <a href="https://www.hpe.com/h20195/v2/getpdf.aspx/c05139649.pdf?ver=1.0">Stan Williams</a></li>
 <li>2:30-3:00 PM - Break</li>
 <li>3:00-4:15 PM - Presentations</li>
+<ul>
+<li>3:00-3:25 PM - “When Energy Efficient Spike-Based Temporal Encoding Meets Resistive Crossbar: From Circuit Design to Application” -- Chenyuan Zhao, Jialing Li and <b>Yang Yi</b></li>
+<li>3:25-3:50 PM - “Evaluating Online-Learning in Memristive Neuromorphic Circuits” - <b>Austin Wyer</b>, Md Musabbir Adnan, Bon Woong Ku, Sung Kyu Lim, Catherine D. Schuman, Raphael C. Pooser and Garrett S. Rose</li>
+<li>3:50-4:15 PM - “IMC: Energy-Efficient In-Memory Convolver for Accelerating Binarized Deep Neural Network” -- Shaahin Angizi and <b>Deliang Fan</b></li>
+</ul>
 <li>4:15-5:00 PM - Posters/Demos</li>
 <li>5:00 PM - Adjourn – Dinner on your own</li>
 </ul>
@@ -132,13 +155,21 @@
   <hr class="featurette-divider">
           <p class="lead">Wednesday, July 19, 2017</p>
           <ul>
-          <li> 8:00-9:00 AM - Registration</li>
+          <li> 8:00-9:00 AM - Registration/Coffee</li>
 <li>9:00-9:10 AM - Welcome/Recap</li>
-<li>9:10-10:10 AM - Keynote Presentation: <a href="https://science.energy.gov/ascr/about/dr-robinson-e-pino/">Robinson Pino</a></li>
-<li>10:10-10:30 AM - Break</li>
-<li>10:30-11:30 AM - Presentations</li>
+<li>9:10-10:10 AM - Keynote Presentation: “The DOE Neuromorphic Computing Research Program” - <a href="https://science.energy.gov/ascr/about/dr-robinson-e-pino/">Robinson Pino</a></li>
+<li>10:10-10:40 AM - Break</li>
+<li>10:40-11:30 AM - Presentations</li>
+<ul>
+<li>10:40-11:05 AM - “3D Memristor-based Adjustable Deep Recurrent Neural Network with Programmable Attention Mechanism” – Hongyu An and <b>Yang Yi</b></li>
+<li>11:05-11:30 AM - “Monolithic 3D IC Design for Deep Neural Networks” -- Kyungwook Chang, Deepak Kadetotad, <b>Yu Cao</b>, Jae-Sun Seo and Sung-Kyu Lim</li>
+</ul>
 <li>11:30 AM - 1:00 PM - Working Lunch - Paths Forward</li>
 <li>1:00-1:40 PM - Presentatations</li>
+<ul>
+<li>1:00-1:25 PM - A Software Stack for Neuromorphic Computing” – <b>James Plank</b>, Mark Dean, Garrett Rose, and Catherine D. Schuman</li>
+<li>1:25-1:40 PM - “Simulation and Visualization of Custom Neuromorphic Hardware using NeMo” - <b>Mark Plagge</b>, Neil McGlohon, Caitlin Ross and Christopher D. Carothers</li>
+</ul>
 <li>1:40-2:30 PM - Speaker Panel/Discussion</li>
 <li>2:30-3:00 PM - End Remarks</li>
 <li>3:00 - Adjourn </li>
