Final program updates.

--- a/program.html
+++ b/program.html
@@ -167,10 +167,11 @@
 <li>11:30 AM - 1:00 PM - Working Lunch - Paths Forward</li>
 <li>1:00-1:40 PM - Presentatations</li>
 <ul>
-<li>1:00-1:25 PM - A Software Stack for Neuromorphic Computing” – <b>James Plank</b>, Mark Dean, Garrett Rose, and Catherine D. Schuman</li>
+<li>1:00-1:25 PM - "A Software Stack for Neuromorphic Computing” – <b>James Plank</b>, Mark Dean, Garrett Rose, and Catherine D. Schuman</li>
 <li>1:25-1:40 PM - “Simulation and Visualization of Custom Neuromorphic Hardware using NeMo” - <b>Mark Plagge</b>, Neil McGlohon, Caitlin Ross and Christopher D. Carothers</li>
 </ul>
-<li>1:40-2:30 PM - Speaker Panel/Discussion</li>
+<li>1:40-2:05 PM - “Memristor Crossbar Based Winner Take All Circuit Design for Self-organization” – Raqibul Hasan and <b>Tarek Taha</b></li>
+<li>2:05-2:30 PM - “Peptide-doped lipid membranes as synaptic mimics for neuromorphic computing” – <b>Pat Collier</b>, Andy Sarles, and Joseph Najem</li>
 <li>2:30-3:00 PM - End Remarks</li>
 <li>3:00 - Adjourn </li>
 </ul>
