Changed from workshop to symposium.

--- a/program.html
+++ b/program.html
@@ -94,7 +94,7 @@
       <div class="row featurette">
         <div class="col-md-7">
 
-          <h2 class="featurette-heading">Workshop <span class="text-muted">Program</span></h2>
+          <h2 class="featurette-heading">Symposium <span class="text-muted">Program</span></h2>
           <hr class="featurette-divider">
           
           <p class="lead">Monday, July 17, 2017</p>
