Updated keynote speakers.

--- a/keynotespeakers.html
+++ b/keynotespeakers.html
@@ -173,6 +173,22 @@ Hans Christen received a Ph.D. in Physics from the Ecole Polytechnique Fédéral
         <img class="featurette-image img-responsive" src="bio_images/hans_christen.jpg" alt="Hans Christen">
         </div>
 	</div>
+	
+	
+	      <div class="row featurette">
+        <div class="col-md-12">
+	<h2 class="featurette-heading">Catherine Schuman</h2>
+        </div>
+        <div class="col-md-7">
+        
+        <p class="lead">
+Katie Schuman is a Liane Russell Early Career Fellow in Computational Data Analytics at Oak Ridge National Laboratory.  Katie received her B.S. in Computer Science and Mathematics from the University of Tennessee in 2010.  She received her doctorate in computer science from the University of Tennessee in 2015, where she completed her dissertation on the use of evolutionary algorithms to train spiking neural networks for neuromorphic systems.  She is continuing her study of models and algorithms for neuromorphic computing as part of her fellowship at ORNL.  Katie also has a joint faculty appointment with the Department of Electrical Engineering and Computer Science at the University of Tennessee, where she, along with four other professors at UT, leads a neuromorphic research team made up of more than faculty members, graduate student researchers, and undergraduate student researchers.
+</p>
+        </div>
+        <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="bio_images/catherine_schuman.jpg" alt="Catherine Schuman">
+        </div>
+	</div>
  <!--
         <div class="col-md-12">
         <h2 class="featurette-heading">Todd Hylton</h2>
