Added ACM in-cooperation.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Venue</h1>
-              <p>The workshop will be held in at the Crowne Plaza in Knoxville, Tennessee, July 17-19, 2017.</p>
+              <p>The symposium will be held in at the Crowne Plaza in Knoxville, Tennessee, July 17-19, 2017.</p>
              <p><a class="btn btn-lg btn-primary" href="registration.html" role="button">Learn more</a></p>
             </div>
           </div>
@@ -169,8 +169,8 @@
 		<!-- first row -->
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Workshop <span class="text-muted">Overview</span></h2>
-          <p class="lead">The goal of this workshop is to bring together leading researchers in neuromorphic computing to present new research, develop new collaborations, and provide a forum to publish work in this area. Our focus will be on architectures, models, and applications of neuromorphic systems, resulting from a very successful workshop last year.</p>
+          <h2 class="featurette-heading">Symposium <span class="text-muted">Overview</span></h2>
+          <p class="lead">The goal of this symposium is to bring together leading researchers in neuromorphic computing to present new research, develop new collaborations, and provide a forum to publish work in this area. Our focus will be on architectures, models, and applications of neuromorphic systems, resulting from a very successful workshop last year.  This symposium is held in cooperation with ACM SIGDA.</p>
           <!--<p class="lead">The goal of this workshop is to define basic research challenges for neuromorphic computing research from the U.S. Department of Energy (DOE) Advanced Scientific Computing Research (ASCR) perspective. Our focus is to define a 10-20 year roadmap for neuromorphic computing that leverages the strengths and capabilities of the DOE National Laboratory system.</p>-->
         </div>
         <!--
