Add ACM SIGDA on first page.

--- a/index.html
+++ b/index.html
@@ -232,6 +232,10 @@
           -->
         </div>
         <p class="pull-right"><a href="#">Back to top</a></p>
+                  <div style="float:right;">
+            <p>In cooperation with</p>
+            <a class="brand" href="http://www.sigda.org"> <img src="images/ACM_Sigda_Logo_color.gif" alt="ACM SIGDA"></a>
+          </div>
       </footer>
 
     </div><!-- /.container -->
