Add my presentations.

--- a/program.html
+++ b/program.html
@@ -101,7 +101,7 @@
           <ul>
           <li>8:00-9:00 AM - Registration/Coffee</li>
           <li>9:00-9:30 AM - Welcome</li>
-          <li>9:30-10:30 AM - Neuromorphic Community Overview Keynote Presentation: <a href="http://catherineschuman.com">Catherine Schuman</a></li>
+          <li>9:30-10:30 AM - <a href="presentations/cschuman_NeuromorphicSurveyKeynote.pdf">Neuromorphic Community Overview</a> Keynote Presentation: <a href="http://catherineschuman.com">Catherine Schuman</a></li>
           <li>10:30-11:00 AM - Break</li>
           <li>11:00 AM-12:05 PM - Presentations</li>
           <ul>
@@ -112,7 +112,7 @@
           <li>12:05-1:30 PM - Working Lunch - Keynote: “Nexus of Machine Learning, Neuromorphic Computing, High Performance Computing, and the Million Veteran Program (MVP)” - <a href="https://www.energy.gov/diversity/contributors/dimitri-kusnezov">Dimitri Kusnezov</a></li>
           <li>1:30-3:10 PM - Presentations</li>
           <ul>
-          <li>1:30-1:55 PM - “Neuromorphic Computing for Temporal Scientific Data Classification” - <b>Catherine Schuman</b>, Thomas Potok, Robert Patton, Steven Young, Gangotree Chakma, Austin Wyer and Garrett Rose</li>
+          <li>1:30-1:55 PM - “<a href="presentations/cschuman_TemporalScientificData_NeuromorphicSymposium_2017.pdf">Neuromorphic Computing for Temporal Scientific Data Classification</a>” - <b>Catherine Schuman</b>, Thomas Potok, Robert Patton, Steven Young, Gangotree Chakma, Austin Wyer and Garrett Rose</li>
           <li>1:55-2:20 PM - “Neuromorphic Data Microscope” -- John Naegle, <b>David Follett</b>, Conrad James, Brad Aimone, Roger Suppona, Duncan Townsend and Gabe Karpman</li>
           <li>2:20-2:45 PM - “Community detection with spiking neural networks for neuromorphic hardware” - <b>Kathleen Hamilton</b>, Neena Imam and Travis Humble</li>
           <li>2:45-3:10 PM - “Neural Computing for Scientific Computing Applications - More than Just Machine Learning” – <b>Brad Aimone</b>, Ojas Parekh and William Severa</li>
