Updated program to reflect presenters and added RoboNav presentation.

--- a/program.html
+++ b/program.html
@@ -107,7 +107,7 @@
           <ul>
           <li>11:00-11:25 AM - “Efficient Hardware Implementation of Cellular Neural Networks with Powers-of-Two Based Incremental Quantization” -- Xiaowei Xu, Qing Lu, Tianchen Wang, Jinglan Liu, Yu Hu and <b>Yiyu Shi</b></li>
           <li>11:25-11:50 AM - “A Multi-Level Optimization Framework for Efficient FPGA-Based Cellular Neural Network Implementation” -- Zhongyang Liu, Shaoheng Luo, Xiaowei Xu, <b>Yiyu Shi</b> and Cheng Zhuo</li>
-          <li>11:50 AM-12:05 PM - “Neuromorphic Navigation with DANNA” – <b>J. Parker Mitchell, Grant Bruer</b>, and Mark Dean</li>
+          <li>11:50 AM-12:05 PM - “<a href="presentations/mitchell_bruer_NeuromorphicNavigation.pdf">Neuromorphic Navigation with DANNA</a>” – <b>J. Parker Mitchell, Grant Bruer</b>, and Mark Dean</li>
           </ul>
           <li>12:05-1:30 PM - Working Lunch - Keynote: “Nexus of Machine Learning, Neuromorphic Computing, High Performance Computing, and the Million Veteran Program (MVP)” - <a href="https://www.energy.gov/diversity/contributors/dimitri-kusnezov">Dimitri Kusnezov</a></li>
           <li>1:30-3:10 PM - Presentations</li>
@@ -144,7 +144,7 @@
 <li>2:30-3:00 PM - Break</li>
 <li>3:00-4:15 PM - Presentations</li>
 <ul>
-<li>3:00-3:25 PM - “When Energy Efficient Spike-Based Temporal Encoding Meets Resistive Crossbar: From Circuit Design to Application” -- Chenyuan Zhao, Jialing Li and <b>Yang Yi</b></li>
+<li>3:00-3:25 PM - “When Energy Efficient Spike-Based Temporal Encoding Meets Resistive Crossbar: From Circuit Design to Application” -- Chenyuan Zhao, Jialing Li, <b>Hongyu An</b>, and Yang Yi</li>
 <li>3:25-3:50 PM - “Evaluating Online-Learning in Memristive Neuromorphic Circuits” - <b>Austin Wyer</b>, Md Musabbir Adnan, Bon Woong Ku, Sung Kyu Lim, Catherine D. Schuman, Raphael C. Pooser and Garrett S. Rose</li>
 <li>3:50-4:15 PM - “IMC: Energy-Efficient In-Memory Convolver for Accelerating Binarized Deep Neural Network” -- Shaahin Angizi and <b>Deliang Fan</b></li>
 </ul>
@@ -161,7 +161,7 @@
 <li>10:10-10:40 AM - Break</li>
 <li>10:40-11:30 AM - Presentations</li>
 <ul>
-<li>10:40-11:05 AM - “3D Memristor-based Adjustable Deep Recurrent Neural Network with Programmable Attention Mechanism” – Hongyu An and <b>Yang Yi</b></li>
+<li>10:40-11:05 AM - “3D Memristor-based Adjustable Deep Recurrent Neural Network with Programmable Attention Mechanism” – <b>Hongyu An</b> and Yang Yi</li>
 <li>11:05-11:30 AM - “Monolithic 3D IC Design for Deep Neural Networks” -- Kyungwook Chang, Deepak Kadetotad, <b>Yu Cao</b>, Jae-Sun Seo and Sung-Kyu Lim</li>
 </ul>
 <li>11:30 AM - 1:00 PM - Working Lunch - Paths Forward</li>
