--- a/program.html
+++ b/program.html
@@ -129,7 +129,7 @@
           <ul>
           <li> 8:00-9:00 AM - Registration/Coffee</li>
 <li>9:00-9:10 AM - Welcome/Recap</li>
-<li>9:10-10:10 AM - Materials Science Keynote Presentation: <a href="https://www.ornl.gov/staff-profile/hans-m-christen">Hans Christen</a></li>
+<li>9:10-10:10 AM - Keynote Presentation: "<a href="presentations/CNMS_presentation_2017-0718_Christen.pdf">Research and user capabilities at ORNL’s Center for Nanophase Materials Sciences</a>" -- <a href="https://www.ornl.gov/staff-profile/hans-m-christen">Hans Christen</a></li>
 <li>10:10-10:30 AM - Break</li>
 <li>10:30 AM -12:15 PM - Presentations</li>
 <ul>
@@ -137,15 +137,15 @@
 <li>10:55-11:20 AM - “From Meta-Stable Switch Collections to Compositional Machine Learning” – <b>Alex Nugent</b> and Tim Molter</li>
 <li>11:20-11:45 AM - “Spatio-Temporal Features on an Energy Budget: Transfer Learning with Deep CNNs and Reservoirs” -- Dillon Graham, Seyed Hamed F. Longroudi, Christopher Kanan, <b>Dhireesha Kudithipudi</b></li>
 <li>11:45 AM-12:00 PM - “From Topological Skyrmion to Biological Spike: Developing All-Skyrmion Spiking Neural Network” – Zhezhi He and <b>Deliang Fan</b></li>
-<li>12:00-12:15 PM - “Memristive Nanowire Networks” - <b>Jack Kendall</b> and Juan Nino</li>
+<li>12:00-12:15 PM - “<a href="presentations/Kendall_Memristive_Nanowire_Neural_Networks.pdf">Memristive Nanowire Networks</a>” - <b>Jack Kendall</b> and Juan Nino</li>
 </ul>
 <li>12:15-1:30 PM - Working Lunch - Importance of Co-Design</li>
-<li>1:30-2:30 PM - Big Picture Keynote – <a href="https://www.hpe.com/h20195/v2/getpdf.aspx/c05139649.pdf?ver=1.0">Stan Williams</a></li>
+<li>1:30-2:30 PM - Keynote Presentation: "<a href="presentations/RSWilliams_DoE_NeuroSymposium_2017.pdf">Inspired by the Brain: Computing from Architecture to Devices</a>" – <a href="https://www.hpe.com/h20195/v2/getpdf.aspx/c05139649.pdf?ver=1.0">Stan Williams</a></li>
 <li>2:30-3:00 PM - Break</li>
 <li>3:00-4:15 PM - Presentations</li>
 <ul>
 <li>3:00-3:25 PM - “When Energy Efficient Spike-Based Temporal Encoding Meets Resistive Crossbar: From Circuit Design to Application” -- Chenyuan Zhao, Jialing Li, <b>Hongyu An</b>, and Yang Yi</li>
-<li>3:25-3:50 PM - “Evaluating Online-Learning in Memristive Neuromorphic Circuits” - <b>Austin Wyer</b>, Md Musabbir Adnan, Bon Woong Ku, Sung Kyu Lim, Catherine D. Schuman, Raphael C. Pooser and Garrett S. Rose</li>
+<li>3:25-3:50 PM - “<a href="presentations/wyer_evaluating_online_learning.pdf">Evaluating Online-Learning in Memristive Neuromorphic Circuits</a>” - <b>Austin Wyer</b>, Md Musabbir Adnan, Bon Woong Ku, Sung Kyu Lim, Catherine D. Schuman, Raphael C. Pooser and Garrett S. Rose</li>
 <li>3:50-4:15 PM - “IMC: Energy-Efficient In-Memory Convolver for Accelerating Binarized Deep Neural Network” -- Shaahin Angizi and <b>Deliang Fan</b></li>
 </ul>
 <li>4:15-5:00 PM - Posters/Demos</li>
