--- a/program.html
+++ b/program.html
@@ -115,7 +115,7 @@
           <li>1:30-1:55 PM - “<a href="presentations/cschuman_TemporalScientificData_NeuromorphicSymposium_2017.pdf">Neuromorphic Computing for Temporal Scientific Data Classification</a>” - <b>Catherine Schuman</b>, Thomas Potok, Robert Patton, Steven Young, Gangotree Chakma, Austin Wyer and Garrett Rose</li>
           <li>1:55-2:20 PM - “Neuromorphic Data Microscope” -- John Naegle, <b>David Follett</b>, Conrad James, Brad Aimone, Roger Suppona, Duncan Townsend and Gabe Karpman</li>
           <li>2:20-2:45 PM - “Community detection with spiking neural networks for neuromorphic hardware” - <b>Kathleen Hamilton</b>, Neena Imam and Travis Humble</li>
-          <li>2:45-3:10 PM - “Neural Computing for Scientific Computing Applications - More than Just Machine Learning” – <b>Brad Aimone</b>, Ojas Parekh and William Severa</li>
+          <li>2:45-3:10 PM - “<a href="presentations/Aimone-NCAMA2017-Presentation.pdf">Neural Computing for Scientific Computing Applications - More than Just Machine Learning</a>” – <b>Brad Aimone</b>, Ojas Parekh and William Severa</li>
           </ul>
           <li>3:10-3:30 PM - Break</li>
           <li>3:30-4:00 PM - Poster Slam</li>
@@ -167,7 +167,7 @@
 <li>11:30 AM - 1:00 PM - Working Lunch - Paths Forward</li>
 <li>1:00-1:40 PM - Presentatations</li>
 <ul>
-<li>1:00-1:25 PM - "A Software Stack for Neuromorphic Computing” – <b>James Plank</b>, Mark Dean, Garrett Rose, and Catherine D. Schuman</li>
+<li>1:00-1:25 PM - "<a href="presentations/plank-2017-07-19-Neuro-Comp-Sym.pdf">A Software Stack for Neuromorphic Computing</a>” – <b>James Plank</b>, Mark Dean, Garrett Rose, and Catherine D. Schuman</li>
 <li>1:25-1:40 PM - “Simulation and Visualization of Custom Neuromorphic Hardware using NeMo” - <b>Mark Plagge</b>, Neil McGlohon, Caitlin Ross and Christopher D. Carothers</li>
 </ul>
 <li>1:40-2:05 PM - “Memristor Crossbar Based Winner Take All Circuit Design for Self-organization” – Raqibul Hasan and <b>Tarek Taha</b></li>
