Adding another presentation.

--- a/program.html
+++ b/program.html
@@ -168,7 +168,7 @@
 <li>1:00-1:40 PM - Presentatations</li>
 <ul>
 <li>1:00-1:25 PM - "<a href="presentations/plank-2017-07-19-Neuro-Comp-Sym.pdf">A Software Stack for Neuromorphic Computing</a>” – <b>James Plank</b>, Mark Dean, Garrett Rose, and Catherine D. Schuman</li>
-<li>1:25-1:40 PM - “Simulation and Visualization of Custom Neuromorphic Hardware using NeMo” - <b>Mark Plagge</b>, Neil McGlohon, Caitlin Ross and Christopher D. Carothers</li>
+<li>1:25-1:40 PM - “<a href="presentations/plagge-NeMo2-Viz-Short-final.pdf">Simulation and Visualization of Custom Neuromorphic Hardware using NeMo</a>” - <b>Mark Plagge</b>, Neil McGlohon, Caitlin Ross and Christopher D. Carothers</li>
 </ul>
 <li>1:40-2:05 PM - “Memristor Crossbar Based Winner Take All Circuit Design for Self-organization” – Raqibul Hasan and <b>Tarek Taha</b></li>
 <li>2:05-2:30 PM - “Peptide-doped lipid membranes as synaptic mimics for neuromorphic computing” – <b>Pat Collier</b>, Andy Sarles, and Joseph Najem</li>
